Opened 14 years ago
Closed 11 years ago
#908 closed bug (fixed)
DeskCalc: not drawing correctly
Reported by: | wkornewald | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I guess this is an app_server bug not drawing correctly. I'm using VMware Player with hrev19048.
In DeskCalc, enter something, close the window, open DeskCalc again. You will see that the text is rendered very strangely (nearly invisible).
Then, click in the text field (the text gets inverted) and enter some text. Everything after that text is rendered correctly. If I invalidate the window contents (move out of screen, for example) it displays everything correctly.
Attachments (4)
Change History (10)
by , 14 years ago
Attachment: | opened.png added |
---|
comment:1 by , 14 years ago
Summary: | DeskCalc: BTextView not drawing correctly after app opened → DeskCalc: not drawing correctly |
---|
Now, disable the numeric keypad. Close DeskCalc. Open DeskCalc. Enable the numeric keypad. I'll attach another screenshot.
by , 14 years ago
Attachment: | disable_close_open_enable.png added |
---|
Disable keypad. Close DeskCalc. Open DeskCalc. Enable keypad.
comment:2 by , 14 years ago
As you can see, it's not drawn correctly. But if I invalidate the invalidated part gets drawn correctly.
comment:3 by , 14 years ago
Owner: | changed from | to
---|
comment:5 by , 11 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Version: | R1/pre-alpha1 → R1/alpha1 |
Similar to what Waldemar described three years ago, disabling and enabling the keypad gives the result shown in the attached screenshot. No need to close/open DeskCalc this time. The same thing happens in replicant mode. This is with the R1/alpha1 release (hrev33109) in VESA mode.
comment:6 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
This is a completely different bug. Please open a new ticket, thanks.
opened DeskCalc