Fixed an interesting bug in the app_server, after beating my head against this for a long time... what happens when the app_server has requested a redraw, but the client sends some drawing commands before starting the redraw session? This would be the case, for example, when TextViews got notified of their parent window becomming active (they would invert the selection outside of any update session). When there was an additional expose event, the app_server would already have the background cleared, so the lonely "invert" command would invert the freshly painted background. Then the normal Draw() of the TextView would be called because of the expose event. By the time the text was rendered, it was rendered on the inverted background, then the normal Draw() contained another "invert" command to invert the region of the selection. Thus inverting just the text, and the background twice. Solution: * introduced a special handling for drawing commands arriving between   requested update session and beginning of that session: the pending   update region is clipped from the region the client is allowed to draw in. * fixes funny text rendering in the selected part of text views. For example   ticket #908.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21867 a95241bf-73f2-0310-859d-f6bbb57e9c96